# SPECTR

./: .gitignore  AGENTS.md  README.md  SPECTR.cmd  TODO.md  config.json  main.py  main.spec  prompt  pyproject.toml  run  run.sh  tools  tools.bat  tools_backup.py
SPECTR/: SPECTR.cmd  config.json  main.pyw  requirements.txt
backend/: pyproject.toml
backend/bridge_core/: __init__.py  main.py
backend/bridge_core/api/: __init__.py  server.py
backend/bridge_core/api/v1/: __init__.py
backend/bridge_core/calculations/: __init__.py  exploration.py  risk.py  travel.py
backend/bridge_core/config/: __init__.py  settings.py
backend/bridge_core/database/: __init__.py  db.py
backend/bridge_core/events/: __init__.py  bus.py
backend/bridge_core/journal/: __init__.py  parser.py  watcher.py
backend/bridge_core/plugins/: __init__.py  base.py  manager.py
backend/bridge_core/services/: __init__.py  archive.py  bridge.py  commander.py  engineering.py  intelligence.py  laboratory.py  missions.py  navigation.py  operations.py  report.py  session_manager.py  statistics.py
backend/bridge_core/state/: __init__.py  engine.py
blackbox/: __init__.py  __main__.py  cli.py  exobiology.py  formatter.py  init_db.py  recorder.py  store.py
core/: app.py  config.py  event_bus.py  game.py  journal.py  notifications.py  overlay.py  plugin_api.py  plugin_base.py  plugin_manager.py  settings_ui.py  status.py
data/: F11504128-codex.json  bio_criteria.json  codexRef.json  materials.json
docs/: DOMAIN.md  SPEC.md  TASKS.md  architecture.md  plugin-development.md
missions/: cli.py  (+1 more)
(+184 files in other folders)
